# rust-by-mr

./: .gitignore  Cargo.toml  README.md
crates/master/src/: main.rs  master.rs
crates/mr-common/: Cargo.toml
crates/mr-common/proto/: task.proto
crates/worker/src/: main.rs
