[package]
name = "rust-by-mr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "master"
path = "crates/master/src/main.rs"

[[bin]]
name = "worker"
path = "crates/worker/src/main.rs"

[workspace]
members = [
    "crates/mr-common"
]

[dependencies]
mr-common = {path = "crates/mr-common"}
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
#tokio = { version = "1", features = ["full"] }
[build-dependencies]
tonic-build = "0.7"
